<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all">
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="send_request">Send Request</string>
    <string name="share">share</string>
    <string name="logout">logout</string>
    <string name="email">e-mail:</string>
    <string name="title">myplex</string>
    <string name="required">required</string>
    <string name="password">password:</string>
    <string name="facebook">sign in with facebook</string>
    <string name="google">sign in with google+</string>
    <string name="letme">browse as guest</string>
    <string name="progress_message">loading &#8230;</string>
    <string name="or">or</string>
    <string name="phone">phone:</string>
    <string name="login">login</string>
    <string name="fname">full name:</string>
    <string name="uName">username:</string>
    <string name="msgUpdate">receive SMS updates</string>
    <string name="mailUpdate">receive mail updates</string>
    <string name="signup">join myplex</string>
    <string name="submit">continue to myplex</string>
    <string name="hinttextemail">"e-mail address"</string>
    <string name="hinttextphone">10 digit mobile number</string>
    <string name="hinttextpwd">password</string>
    <string name="hinttextname">display name</string>
    <string name="forgetPwd">forgot password? let\'s fix it here</string>
    <string name="userCancelled">user has canceled the request</string>
    <string name="send_to">share via</string>
    <string name="carddetailcommentsection_editcomment">add a comment</string>
    <string name="carddetailcommentsection_editreview">add a review</string>
    <string name="tnc">"By creating an account and signing up to myplex, I accept the Terms of Service and Privacy Policy"</string>
    <string name="carddetailsectionheader_comment">comments</string>
    <string name="carddetailsectionheader_loadmore">load more</string>
    <string name="carddetailsectionheader_credits">credits</string>
    <string name="carddetailsectionheader_description">description</string>
    <string name="carddetailsectionheader_myplexdescription">myplex description</string>
    <string name="carddetailsectionheader_rate">rate</string>
    <string name="carddetailsectionheader_relatedMultimedia">related multimedia</string>
     <string name="carddetailsection_refresh_msg">  (updating..)</string>
    <string name="pricepopupdiscount">off</string>
    <string name="pricepopuprent">rent</string>
    <string name="carddetailsectionheader_reviews">reviews </string>
    <string name="navigationmenu_settings">settings</string>
    <string name="card_delete">&#x2421;</string>
    <string name="card_heart">&#xE1A2;</string>
    <string name="card_filledheart">&#x002B;</string>
    <string name="card_comment">&#xE390;</string>
    <string name="card_people">&#xE972;</string>
    <string name="card_play">&#x25B6;</string>
    <string name="card_pause">&#xE8A0;</string>
    <string name="card_duration">&#x1F4F9;</string>
    <string name="price_rupeecode">&#x20B9;</string>
    <string name="rating_low">&#x2639;</string>
    <string name="rating_high">&#x263B;</string>
    <string name="toast_warning">&#x26A0;</string>
    <string name="toast_info">&#x26A0;</string>
    <string name="actionbar_filter">&#x25E2;</string>
    <string name="card_play_font">&#xE8B1;</string>
    <string name="card_trailer_font">&#xE8B0;</string>
    <string name="card_minimize">&#x2B07;</string>
    <string name="new_arrival_indicator">&#x2691;</string>
    <string name="profile_noimage">&#xE420;</string>
    <string name="ratingheading">rate this movie </string>
    <string name="ratingmessageheading">add a movie review </string>
    <string name="ratingmessagehint">add a review</string>
    <string name="commentpopupheading">add a comment</string>
     <string name="comment_ok_adding">adding..</string>
    <string name="commentpopuphint">add a comment</string>
    <string name="feedbackheading">rate myplex </string>
    <string name="feedbackmessageheading">share your experience </string>
    <string name="feedbackmessagehint">feedback on myplex</string>
    <string name="feedbackcancelbutton">cancel</string>
    <string name="feedbackokbutton">ok</string>
    <string name="subscriptionconfirmationdialogtext">Do you want to buy</string>
    <string name="playhint">play</string>
    <string name="trailerhint">play trailer</string>
    <string name="adultwarning">18+ only </string>
    <string name="myplex_home">myplex picks</string>
    <string name="rate_this">rate </string>
    <string name="add_live_tv_review">add a live tv review</string>
    <string name="loading">loading</string>
    <string name="jump_to_episode">jump to episode</string>
    <string name="pref_state">pref_state</string>
    <string name="state">state</string>
    <string name="stream">stream</string>
    <string name="download">download</string>
	<string name="continieu">continue</string>
	<string name="dont_ask_again">Don\'t ask again</string>
	<string name="dont_ask_again_msg">(you may change the options in settings)</string>
	<string name="best_option">best: download to watch offline</string>
	<string name="best_option_hd">best : download HD, watch offline</string>
	<string name="best_option_msg">highest quality SD video and audio \nwatch offline for 48 hrs; \nunlimited views</string>
	<string name="best_option_msg_hd">highest quality HD video and audio \nwatch offline for 48 hrs; \nunlimited views</string>
	<string name="good_option">good : stream online</string>
	<string name="good_option_hd">good : stream SD online</string>
	<string name="always_ask">always ask</string>
	<string name="good_option_msg">384-1664kbps, adaptive bit rate streaming buffering possible due to network conditions</string>
	<string name="is_dont_ask_again">is_dont_ask_again</string>
	<string name="isDownload">isDownload</string>
	<string name="isSensorScrollEnabled">isSensorScrollEnabled</string>
	<string name="unable_download_msg">Unable to download.Insufficient space to download.free up storage</string>
	<string name="canot_fetch_url">can\'t fetch url</string>
	<string name="no_internet_connection">no internet connection</string>
	<string name="download_or_stream_msg">play rental movies  download, stream</string>
	<string name="switch_to_download_in_setting_msg">you can switch to download in settings</string>
	<string name="error_network_not_available">network is not available</string>
	<string name="epg_not_avaialable">epg not available</string>
    <string name="moredetails">more details</string>
    <string name="cardstatusfree">coming soon</string>
    <string name="cardstatustempfree">watch now for free</string>
    <string name="cardstatuspaid">watch now</string>
    <string name="card_watch_before">watch before</string>
    <string name="lastwatchedcontent">last watched content</string>
    <string name="similarcontent">similar content</string>
    <string name="similar_live_tv">similar channels</string>
    <string name="similar_movies">similar movies</string>
    <string name="listempty">no data</string>
    <string name="no_url">No URL</string>
    <string name="userprofilename">profilename</string>
    <string name="userpic">userpicurl</string>
    <string name="iconfav">&#x002B;</string>
    <string name="iconpurchases">&#xE550;</string>
    <string name="icondnload">&#xE811;</string>
    <string name="icondiscover">&#xE671;</string>
    <string name="iconsettings">&#xF033;</string>
    <string name="iconfriends">&#xE972;</string>
    <string name="iconlogout">&#xEE10;</string>
    <string name="iconrate"></string>
    <string name="iconhome">&#x2302;</string>
    <string name="iconmovie">&#xE8B1;</string>
    <string name="iconbollywood">&#x266B;</string>
    <string name="iconfree">&#x263B;</string>
    <string name="iconrefresh">&#xEB82;</string>
    <string name="iconlivetv">&#xE8C0;</string>
    <string name="icontvshows">&#xE800;</string>
    <string name="iconyoutube">&#x2607;</string>
    <string name="iconcricket">&#x26BE;</string>
    <string name="icontv">&#x1F4FA;</string>
    <string name="iconshare">&#xF601;</string>
    <string name="record_play">&#x25B6;</string>
	<string name="reminder_icon">&#x23F0;</string>
	<string name="play_icon">&#x25B6;</string>
    <string-array name="hometabletanim">
        <item>Bottom-In</item>
        <item>Right-In</item>
        <item>Left-In</item>
        <item>Scale</item>
        <item>Alpha-In</item>
    </string-array>
    	<string name="search_hint">select one of the keywords or \ntouch here to enter keyword &#8230;</string>
    	<string name="search_hint_small">search &#8230;</string>
    <string name="tag1">1</string>
	<string name="tag2">2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
     <string name="osname">Android</string>
    <string name="syncing_purchases">syncing purchases..</string>
    <string name="syncing_purchases_failed_setting_msg">sync purchase failed.you can manually sync in settings.</string>
    <string name="interneterr">internet connection is not active</string>
    <string name="loginerr">unable to login.\n"browse as guest".</string>
    <string name="loginconerr">device registration failed. relaunch myplex.</string>
    <string name="wrongemail">invalid e-mail address or password</string>
    <string name="wrongemailhint">enter valid e-mail address!</string>
    <string name="usernamehint">username is required</string>
    <string name="passwordhint">password is required</string>
    <string name="wrongcredentials">username and password are required</string>
    <string name="login_failed_try_myplex_signup">login failed , We recommend to use myplex signup</string>
    <string name="downloadserror">no downloads yet… \nlet\'s start one, can watch it while downloading itself</string>
    <string name="searcherror">unable to find results … \ntry one of our suggested search terms?</string>
    <string name="purchaseserror">no purchases yet … \nlet\'s change that!</string>
    <string name="promo_samsung">Sign into myplex and use coupon code \"samsung\" to unlock your free movies! available under Samsung TAB S Offer section in the app.</string>
    <string name="promo_samsung_login_user">Apply coupon code \"samsung\" after selecting play option for any movie available under \"Tab S Free HD Movies\" section</string>
    <string name="promo_samsung_title">Tab S Free HD Movies</string>
    <string name="promo_samsung_ok_button">sign into myplex</string>
    <string name="promo_samsung_ok_button_login">ok</string>
    <string name="must_logged_in">must be logged in to watch</string>
    <string name="login_to_play">login to play</string>
    <string name="continiue_as_guest">continue as guest</string>
    <string name="error_message_2g_videoplay">can not play video in 2G network.</string>
    <string name="alert_message_3g_movie">playing movie in 3G. data charges may apply.</string>
    <string name="alert_message_3g_trailer">playing trailer in 3G. data charges may apply.</string>
    <string name="lastSharedTime">lastSharedTime</string>
    <string name="transaction_server_error">our server thinks this is a duplicate transaction.if you think not, select ‘continue’, otherwise select ‘cancel’ and retry your transaction again in 60 seconds.</string>
    <string name="retry">continue</string>
    <string name="cancel">cancel</string>
    <string name="later">later</string>
     <string name="transaction_cancel_msg">Do you really want to cancel the transaction ?</string>
     <string name="transaction_cancel_yes">yes</string>
     <string name="transaction_cancel_no">no</string>
    <string name="clientsecret">ApalyaAndroid</string>
    <string name="devRegPath">registerDevice</string>
    <string name="genKeyReqPath">generateKey</string>
</resources>