<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF" >

    <TextView
        android:id="@+id/feedback_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginTop="20dp"
        android:text="@string/ratingheading"
        android:textColor="#000000"
        android:textSize="@dimen/textsize_20" />

    <View
        android:id="@+id/feedback_heading_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/feedback_heading"
        android:layout_marginBottom="@dimen/margin_gap_8"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginRight="@dimen/margin_gap_24"
        android:layout_marginTop="@dimen/margin_gap_8"
        android:background="#efefef" />

    <LinearLayout
        android:id="@+id/feedback_ratingbar_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_heading_separator"
        android:layout_marginBottom="@dimen/margin_gap_8"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginRight="@dimen/margin_gap_24"
        android:layout_marginTop="@dimen/margin_gap_8"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/feedback_ratingtext_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rating_low"
            android:textColor="#000000"
            android:textSize="@dimen/textsize_20" />

        <SeekBar
            android:id="@+id/feedback_ratingbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_gap_2"
            android:layout_marginRight="@dimen/margin_gap_2"
            android:layout_weight="1"
            android:max="5"
            android:progress="0" />

        <TextView
            android:id="@+id/feedback_ratingtext_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rating_high"
            android:textColor="#000000"
            android:textSize="@dimen/textsize_20" />
    </LinearLayout>

    <TextView
        android:id="@+id/feedback_messageheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_ratingbar_layout"
        android:layout_marginBottom="@dimen/margin_gap_8"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginRight="@dimen/margin_gap_24"
        android:layout_marginTop="@dimen/margin_gap_24"
        android:text="@string/ratingmessageheading"
        android:textColor="#000000"
        android:textSize="@dimen/textsize_20" />

    <View
        android:id="@+id/feedback_messageheading_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/feedback_messageheading"
        android:layout_marginBottom="@dimen/margin_gap_8"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginRight="@dimen/margin_gap_24"
        android:layout_marginTop="@dimen/margin_gap_8"
        android:background="#efefef" />

    <EditText
        android:id="@+id/feedback_messagebox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/feedback_messageheading_separator"
        android:layout_marginBottom="@dimen/margin_gap_8"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginRight="@dimen/margin_gap_24"
        android:layout_marginTop="@dimen/margin_gap_8"
        android:background="@drawable/feedbackeditbox_bg"
        android:ems="10"
        android:hint="@string/ratingmessagehint"
        android:singleLine="false" >
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_gap_24"
        android:layout_below="@+id/feedback_messagebox" >

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#efefef" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/feedback_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/feedbackcancelbutton" />

            <View
                android:id="@+id/separator"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#efefef" />

            <Button
                android:id="@+id/feedback_ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/feedbackokbutton" />
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/feedback_progressbar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_gap_4"
        android:visibility="gone" />

</RelativeLayout>