<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/subscription_confirmationtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_gap_24"
        android:layout_marginTop="20dp"
        android:text="@string/subscriptionconfirmationdialogtext"
        android:textColor="#4f4f4f"
        android:textSize="@dimen/textsize_18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/subscription_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/feedbackcancelbutton"
                android:textColor="#ADADAD"
                android:textSize="18sp" />

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dbdbdb" />

            <Button
                android:id="@+id/subscription_ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCFFFFFF"
                android:text="@string/feedbackokbutton"
                android:textColor="#ADADAD"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>